--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="profile">
         <div cls="section_pic-container">
-            <img src="./assets//profile-pic.png" alt="Mensah Anni profile picture"/>
+            <img src="profile-pic.png" alt="Mensah Anni profile picture"/>
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello I'm </p>
@@ -51,8 +51,8 @@
             </div>
             
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" onclick="location.href='https://linkedin.com'"/>
-                <img src="./assets/github.png" alt="My Github Profile" class="icon" onclick="location.href='https://github.com'"/>
+                <img src="linkedin.png" alt="My Linkedin Profile" class="icon" onclick="location.href='https://linkedin.com'"/>
+                <img src="github.png" alt="My Github Profile" class="icon" onclick="location.href='https://github.com'"/>
             </div>
         </div>
        </section>
@@ -60,17 +60,17 @@
         <p class="section_text_p1">Know me more.</p>
         <h1 class="title">About Me</h1>
         <div class="section_pic-container">
-            <img src="./assets/about-pic.png" alt="Profile PIctiure" class="about-ppic">
+            <img src="about-pic.png" alt="Profile PIctiure" class="about-ppic">
         </div>      
         <div class="about-details-container">
             <div class="about-container">
                 <div class="details-container">
-                    <img src="./asseats/experience.png" alt="Experience Icon" class="icon">
+                    <img src="experience.png" alt="Experience Icon" class="icon">
                     <h3>Experience</h3>
                     <p>1year <br/>Fonrt End Developer</p>
                 </div>
                 <div class="details-container">
-                    <img src="./assets/education.png"   alt="Education Icon" class="icon">
+                    <img src="education.png"   alt="Education Icon" class="icon">
                     <h3>Education</h3>
                     <p>BSc Information Technology</p>
                 </div>
@@ -80,7 +80,7 @@
                      <br> ojshivhfbohvuo is ioohfivbci hdis\bvi  dfibniv  sdfhj dsfin jc ia   iwfeupu9hvi</p>
             </div>
         </div> 
-        <img src="./assets/about-pic.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./assets/arrow-icon.png'" />
+        <img src="about-pic.png" alt="Arrow icon" class="icon arrow" onclick="location.href='arrow-icon.png'" />
     </section>
     <script src="script.js"></script>
 </body>
