--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="profile">
         <div cls="section_pic-container">
-            <img src="profile-pic.png" alt="Mensah Anni profile picture"/>
+            <img src="Profile.pic1.png" alt="Mensah Anni profile picture"/>
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello I'm </p>
@@ -60,7 +60,7 @@
         <p class="section_text_p1">Know me more.</p>
         <h1 class="title">About Me</h1>
         <div class="section_pic-container">
-            <img src="about-pic.png" alt="Profile PIctiure" class="about-ppic">
+            <img src="profile.pic2.png" alt="Profile PIctiure" class="about-ppic">
         </div>      
         <div class="about-details-container">
             <div class="about-container">
